[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Snake.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameControl.gd" type="Script" id=3]
[ext_resource path="res://audio/Chinese_2.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/barrel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/knight.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/CoinCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/LifeCounter.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array(  )
}

[node name="Game" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Snake" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 511, 665.493 )
z_index = 0
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="SnakeTrail" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="GameControl" type="Node2D" parent="." index="2"]

pause_mode = 2
position = Vector2( -51.4425, 52.9924 )
script = ExtResource( 3 )
_sections_unfolded = [ "Pause" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="barrel1" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 245.782, 180.787 )
scale = Vector2( 0.8, 0.8 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="barrel2" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 778.325, 179.837 )
scale = Vector2( 0.8, 0.8 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="barrel6" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 787.921, 424.865 )
scale = Vector2( 0.8, 0.8 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="barrel3" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 254.499, 418.309 )
scale = Vector2( 0.8, 0.8 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="knight" parent="." index="8" instance=ExtResource( 6 )]

position = Vector2( 218.292, 293.3 )
rotation = 4.71239
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="UI" type="Node2D" parent="." index="9"]

editor/display_folded = true
z_index = 500
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CoinCounter" parent="UI" index="0" instance=ExtResource( 7 )]

position = Vector2( 994.558, 36.1001 )

[node name="LifeCounter" parent="UI" index="1" instance=ExtResource( 8 )]

position = Vector2( 42.4176, 36.1001 )

[node name="Tween" type="Tween" parent="." index="10"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="coin_picked_up" from="Snake" to="." method="_on_Snake_coin_picked_up"]

[connection signal="crashed" from="Snake" to="." method="_on_Snake_crashed"]

[connection signal="direction_changed" from="Snake" to="." method="_on_Snake_direction_changed"]

[connection signal="emit_coins" from="Snake" to="." method="_on_Snake_emit_coins"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


